objects/Financier_Criteria_for_FMV_Rates__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting stores the criteria for financier&apos;s FMV rates. The &quot;[insert trigger name here]&quot; on the lease payment references this custom setting so that it can query for the correct FMV rate from the FMV Rates object</description>
    <fields>
        <fullName>FMV_Rate_Field__c</fullName>
        <description>This is the field on the FMV Rate object that will be queried. (Essentially the Lease Payment Field value is being mapped (looking for a match) to this field on the FMV rate object.</description>
        <label>FMV Rate Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financier__c</fullName>
        <label>Financier</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Payment_Field__c</fullName>
        <description>The value from this field on the Lease Payment will be queried (for a match) against the corresponding field on the rates object. The field on the rates object that will be queried is referenced on the record (Field name = FMV Rate Field)</description>
        <label>Lease Payment Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Financier Criteria for FMV Rates</label>
</CustomObject>